PharmaDemo/src/objects/SFDC_Acct_Plan__c.object
<CustomObject>
    <description>Overall goals, objectives, and challenges for penetrating an account.</description>
    <fields>
        <fullName>Account_Goals__c</fullName>
        <label>Account Goals</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Existing Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Contact&apos;s primary location must be same as Primary Account on Business Plan</errorMessage>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Organisation__c</valueField>
            </filterItems>
            <infoMessage>Contact&apos;s primary location must be same as Primary Account on Business Plan</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Business Plans</relationshipLabel>
        <relationshipName>R00Nj0000003oDM3EAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Business_Problems__c</fullName>
        <label>Key Business Problems</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_FY_Product_Sales__c</fullName>
        <label>Last FY Product Sales</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Plan_Revision__c</fullName>
        <label>Last Plan Revision</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunities__c</fullName>
        <label>Opportunities</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Organisation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organisation</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Business Plans</relationshipLabel>
        <relationshipName>R00Nj0000003oDLqEAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organisations__c</fullName>
        <label>Organisations</label>
        <summaryForeignKey>Additional_Business_Plan_Organisation__c.Business_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Plan_FY_Product_Sales_Goal__c</fullName>
        <label>Plan FY Product Sales Goal</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plan_Status__c</fullName>
        <label>Plan Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Planning_Year__c</fullName>
        <label>Planning Year</label>
        <picklist>
            <picklistValues>
                <fullName>FY2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY2010</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Potential_Barriers__c</fullName>
        <label>Potential Barriers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Sales_Growth__c</fullName>
        <formula>IF ( Last_FY_Product_Sales__c = 0, 1 ,  (  Plan_FY_Product_Sales_Goal__c -  Last_FY_Product_Sales__c ) /  Last_FY_Product_Sales__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Sales Growth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>PharmaProduct__c</referenceTo>
        <relationshipLabel>Business Plans</relationshipLabel>
        <relationshipName>R00Nj0000003oDMTEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stakeholders__c</fullName>
        <label>Stakeholders</label>
        <summaryForeignKey>Additional_Business_Plan_Contacts__c.Business_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Strengths__c</fullName>
        <label>Strengths</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Strengths_to_Leverage__c</fullName>
        <label>Strengths to Leverage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Threats__c</fullName>
        <label>Threats</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, IMAGE(&quot;/img/icon/tasks16.gif&quot;, &quot;View&quot;) ,&quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weaknesses__c</fullName>
        <label>Weaknesses</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Business Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Business Plan</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>